umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0314_ClC1=CC=CC=C1CNCCN_1ac2.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles
category: opensmiles
opensmiles:
  success: true
  summary:
    sum_formula: C9ClN2
    atom_count: 12
    bond_count: 12
